website/src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* Font imports Including Font Awesome Icons */
@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Lora:wght@500&family=Roboto&display=swap');
@import "/fontawesome/css/all.css";

@font-face {
  font-family: 'AO3';
  src: url('/AO3.eot'); 
  src: url('/AO3.eot?#iefix') format('embedded-opentype'),
      url('/AO3.woff') format('woff'), 
      url('/AO3.woff2') format('woff2'), 
      url('/AO3.ttf')  format('truetype'), 
      url('/AO3.svg') format('svg'); 
  font-weight: normal; 
  font-style: normal;
  }

/* Removes Docusaurus external link icon */
[class*=iconExternalLink] {
  display: none;
}

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #5b4822;
  --ifm-color-primary-dark: #52411f;
  --ifm-color-primary-darker: #4d3d1d;
  --ifm-color-primary-darkest: #403218;
  --ifm-color-primary-light: #644f25;
  --ifm-color-primary-lighter: #695327;
  --ifm-color-primary-lightest: #765e2c;
  --ifm-background-color: #E3E3E3;
  --ifm-dropdown-background-color: #312f34;
  --ifm-font-color-base: #3d3d3d;
  --ifm-blockquote-color: #626262;
  --ifm-code-background: rgba(255, 252, 214, 0.5);
  --ifm-link-color: #464b26;
  --ifm-link-hover-color: #66140F;
  --ifm-link-decoration: underline solid #66140F 3px;
  --ifm-link-hover-decoration: none;
  --ifm-color-emphasis-300: #433F3D;
  --ifm-pagination-nav-color-hover: #66140F;
  --ifm-color-secondary: rgba(207, 209, 211, 0.6);
  --ifm-color-success: rgba(0, 164, 0, 0.6);
  --ifm-color-info: rgba(84, 199, 236, 0.6);
  --ifm-color-warning: rgba(255, 186, 0, 0.6);
  --ifm-color-danger: rgba(250, 56, 62, 0.6);
  --ifm-color-secondary-dark: rgba(212, 213, 216, 0.6);
  --ifm-color-success-dark: rgba(0, 148, 0, 0.6);
  --ifm-color-info-dark: rgba(76, 179, 212, 0.6);
  --ifm-color-warning-dark: rgba(230, 167, 0, 0.6);
  --ifm-color-danger-dark: rgba(225, 50, 56, 0.6);
  --ifm-color-secondary-contrast-background: rgb(231, 231, 231);
  --ifm-color-success-contrast-background: rgb(212, 226, 212);
  --ifm-color-info-contrast-background: rgb(206, 217, 221);
  --ifm-color-warning-contrast-background: rgb(226, 219, 202);
  --ifm-color-danger-contrast-background: rgb(226, 207, 208);
  --ifm-footer-color: #e3e3e3;
  --ifm-navbar-link-color: #E3E3E3;
  --ifm-navbar-link-hover-color: #FDEB86;
  --ifm-menu-link-sublist-icon-filter: invert(100%) sepia(94%) saturate(17%) hue-rotate(223deg) brightness(104%) contrast(98%);
  --ifm-font-family-base: 'Roboto', sans-serif;
  --ifm-font-family-monospace: 'Cutive Mono', 'Courier New', monospace;
  --ifm-code-font-size: 95%;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
html[data-theme='dark'] {
  --ifm-color-primary: #929866;
  --ifm-color-primary-dark: #83895c;
  --ifm-color-primary-darker: #7c8157;
  --ifm-color-primary-darkest: #666a47;
  --ifm-color-primary-light: #9da275;
  --ifm-color-primary-lighter: #a2a77d;
  --ifm-color-primary-lightest: #b3b793;
  --ifm-background-color: #171717;
  --ifm-dropdown-background-color: #312f34;
  --ifm-font-color-base: #eeeeee;
  --ifm-blockquote-color: #dddddd;
  --ifm-code-background: rgba(255, 252, 214, 0.25);
  --ifm-link-color: #929866;
  --ifm-link-hover-color: #c6625d;
  --ifm-link-decoration: underline solid #c6625d 3px;
  --ifm-link-hover-decoration: none;
  --ifm-color-emphasis-300: #7B8259;
  --ifm-pagination-nav-color-hover: #c6625d;
  --ifm-color-secondary: rgba(207, 209, 211, 0.6);
  --ifm-color-success: rgba(0, 164, 0, 0.6);
  --ifm-color-info: rgba(84, 199, 236, 0.6);
  --ifm-color-warning: rgba(255, 186, 0, 0.6);
  --ifm-color-danger: rgba(250, 56, 62, 0.6);
  --ifm-color-secondary-dark: rgba(212, 213, 216, 0.6);
  --ifm-color-success-dark: rgba(0, 148, 0, 0.6);
  --ifm-color-info-dark: rgba(76, 179, 212, 0.6);
  --ifm-color-warning-dark: rgba(230, 167, 0, 0.6);
  --ifm-color-danger-dark: rgba(225, 50, 56, 0.6);
  --ifm-color-secondary-contrast-background: rgb(59, 59, 59);
  --ifm-color-success-contrast-background: rgb(0, 44, 0);
  --ifm-color-info-contrast-background: rgb(20, 49, 58);
  --ifm-color-warning-contrast-background: rgb(65, 47, 0);
  --ifm-color-danger-contrast-background: rgb(54, 13, 14);
  --ifm-footer-color: #e3e3e3;
  --ifm-navbar-link-color: #E3E3E3;
  --ifm-navbar-link-hover-color: #FDEB86;
}

.footer--dark {
  --ifm-footer-link-color: #E3E3E3;
  --ifm-footer-link-hover-color: #FDEB86;
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

html[data-theme='dark'] .docusaurus-highlight-code-line {
  background-color: rgba(19, 18, 28, 0.3);
}

code {
  font-family: var(--ifm-font-family-monospace);
}

/* Sets footer and navbar colors */
html[data-theme='dark'] .footer,
html[data-theme='dark'] .navbar,
html[data-theme='light'] .footer,
html[data-theme='light'] .navbar,
html[data-theme='dark'] .navbar-sidebar,
html[data-theme='light'] .navbar-sidebar {
  background-color: #312f34;
}

/* Adds icons to navbar */
.info::before {
  font: var(--fa-font-solid);
  content: '\f05a';
  padding-right: 5px;
}

.tutorial::before {
  font: var(--fa-font-solid);
  content: '\f059';
  padding-right: 5px;
}

.ao3::before {
  font-family: 'AO3';
  font-size: 1.3em;
  content: 'A';
}

.discord::before {
  font: var(--fa-font-brands);
  content: '\f392';
  padding-right: 5px;
}

.tumblr::before {
  font: var(--fa-font-brands);
  content: '\f173';
  padding-right: 5px;
}

.twitter::before {
  font: var(--fa-font-brands);
  content: '\f099';
  padding-right: 5px;
}

.info,
.tutorial,
.ao3,
.discord,
.tumblr,
.twitter {
  justify-content: flex-start;
  align-items: center;
}

/* Link stylings */
a:hover {
  background-color: var(--ifm-link-hover-color);
  color: var(--ifm-background-color);
}

a.navbar__brand,
a.menu__link,
a.navbar__link,
a.footer__link-item,
a.hash-link,
a.table-of-contents__link,
a.pagination-nav__link,
a.dropdown__link,
a.preview,
a.preview:hover,
img {
  text-decoration: none;
  background: transparent;
}

a.dropdown__link {
  color: var(--ifm-navbar-link-color);
}

a.dropdown__link:hover {
  color: var(--ifm-navbar-link-hover-color);
}

a.table-of-contents__link:hover::before {
  font: var(--fa-font-solid);
  content: '\f0da';
  padding-right: 5px;
}

a.pagination-nav__link:hover {
  color: var(--ifm-pagination-nav-color-hover);
}

/* Header Stylings */
h1,
h2,
h3,
h4,
h6 {
  line-height: 1.2rem;
  font-weight: 400;
  font-family: 'Lora', serif;
  color: var(--ifm-color-primary-lightest);
}

h1 {
  margin-top: 1.2rem;
  margin-bottom: 1.2rem;
}

h5,
h6 {
  text-transform: uppercase;
}

/* text stylings */
blockquote {
  border-radius: 0.3rem;
}

em {
  color: var(--ifm-color-primary-lightest);
}

strong {
  font-family: 'Lora', serif;
  font-variant: small-caps;
  letter-spacing: 0.2rem;
}

/* Header sizes for mobile */
@media screen and (max-width:990px) {
  h1 {
    font-size: 1.902em;
  }

  h2 {
    font-size: 1.424em;
  }

  h3 {
    font-size: 1.266em;
  }

  h4 {
    font-size: 1.125em;
  }

  a.menu__link,
  .navbar-sidebar__back {
    color: #E3E3E3;
  }

  a.menu__link:hover,
  a.menu__link:active {
    color: #FDEB86;
  }
}

.navbar__toggle {
  color: var(--ifm-navbar-link-color);
}

/* ModList Styling */
.avatar {
  margin-bottom: 5px;
}

.avatar__name,
.avatar__subtitle {
  padding: 0px;
  margin: 0px;
  line-height: normal;
  font-weight: normal;
}

.avatar__subtitle {
  display: flex;
  flex-direction: row;
}

i.fa-brands {
  padding-right: 5px;
}

/* Image Lightbox CSS */
.lightbox,
.lightbox:hover {
	display: none;
	position: fixed;
	z-index: 999;
	width: 100%;
	height: 100%;
	text-align: center;
	top: 0;
	left: 0;
	background: rgba(0,0,0,0.8);
}

.lightbox img {
	max-width: 90%;
	max-height: 80%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.lightbox:target {
	outline: none;
	display: block;
}

.thumbnail {
  display: block;
  margin: 0 auto;
  max-width: 50%;
  padding: 5px;
  border: 1px solid var(--ifm-color-primary-lightest);
  border-radius: 5px;
  filter: grayscale(50%);
}

.label {
  font-size: 8pt;
  color: var(--ifm-color-primary-lightest);
  font-style: italic;
  margin-bottom: 5px;
  text-align: center;
}

